syntax = "proto3";

option go_package = "./pkg/proto/proto";

message NewNote {
    string user_name = 1;
    string body = 2; 
}

message UpdNote {
    string user_name = 1;
    string id_note = 2;
    string body = 3; 
}

message DelNote {
    string user_name = 1;
    string id_note = 2;
}

message Response {
    bool status = 1;
    string id_note = 2;
}

service MessageService {
    rpc InsertNote (NewNote) returns (Response);
    rpc UpdateNote (UpdNote) returns (Response);
    rpc DeleteNote (DelNote) returns (Response);
}